--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -81,7 +81,7 @@
    * Dark Colors
    * -------------------------------------------
    */
-
+/* 
   body {
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
@@ -144,8 +144,8 @@
     --ion-color-light-contrast: #ffffff;
     --ion-color-light-contrast-rgb: 255,255,255;
     --ion-color-light-shade: #1e2023;
-    --ion-color-light-tint: #383a3e;
-  }
+    --ion-color-light-tint: #383a3e; 
+  }*/
 
   /*
    * iOS Dark Theme
@@ -195,7 +195,7 @@
    * Material Design Dark Theme
    * -------------------------------------------
    */
-
+/* 
   .md body {
     --ion-background-color: #121212;
     --ion-background-color-rgb: 18,18,18;
@@ -232,5 +232,5 @@
     --ion-tab-bar-background: #1f1f1f;
 
     --ion-card-background: #1e1e1e;
-  }
+  } */
 }
